packages/vuetify/src/components/VOtpInput/VOtpInput.sass
@use 'sass:math'
@use '../../styles/settings'
@use '../../styles/tools'
@use './variables' as *

@include tools.layer('components')
  .v-otp-input
    align-items: center
    display: flex
    justify-content: center
    padding: $otp-input-padding
    position: relative
    @include tools.rounded(4px)

    .v-field
      height: 100%

      .v-field__outline
        &__start,
        &__end
          flex: 1

  .v-otp-input__divider
    margin: $otp-input-divider-margin

  .v-otp-group
    display: contents

    .v-field
      flex: 1

    &--merged
      display: flex
      gap: 0
      align-items: center
      height: 100%
      border-radius: inherit

      .v-field
        flex: 1
        border-radius: 0

        .v-field__outline__start,
        .v-field__outline__end
          border-radius: 0

        &:not(:first-child)
          margin-inline-start: -1px

          .v-field__outline__start
            border-inline-start-width: 0

        &:hover
          z-index: 1

          .v-field__outline__start
            border-inline-start-width: var(--v-field-border-width)

        &.v-field--focused
          z-index: 2

          .v-field__outline__start
            border-inline-start-width: var(--v-field-border-width)

        &:first-child
          border-start-start-radius: inherit
          border-end-start-radius: inherit

          .v-field__outline__start
            border-start-start-radius: inherit
            border-end-start-radius: inherit

        &:last-child
          border-start-end-radius: inherit
          border-end-end-radius: inherit

          .v-field__outline__end
            border-start-end-radius: inherit
            border-end-end-radius: inherit

  .v-otp-input__input-wrapper
    position: absolute
    inset: 0
    z-index: 10
    pointer-events: none
    overflow: hidden

  .v-otp-input__input
    position: absolute
    inset: 0
    width: 100%
    height: 100%
    opacity: 1
    color: transparent
    caret-color: transparent
    background: transparent
    border: none
    outline: none
    box-shadow: none
    pointer-events: none
    cursor: text

  .v-otp-input:focus-within .v-otp-input__input
    pointer-events: all
    font-size: 64px
    font-family: monospace
    letter-spacing: -.5em
    line-height: 1

    &::selection
      background: transparent
      color: transparent

    &:-webkit-autofill
      background: transparent !important
      color: transparent !important
      -webkit-text-fill-color: transparent !important
      box-shadow: none !important

  .v-otp-input__content
    align-items: center
    display: flex
    gap: $otp-input-content-gap
    padding: $otp-input-content-padding
    justify-content: center
    width: $otp-input-content-max-width
    max-width: 100%
    position: relative
    border-radius: inherit

    .v-otp-input--divided &
      max-width: $otp-input-divided-content-max-width

  @at-root
    @include tools.density('v-otp-input', $input-density) using ($modifier)
      .v-otp-input__content
        height: #{$otp-input-content-height + math.div($modifier, 2)}

  .v-otp-input__field
    color: inherit
    font-size: $otp-input-field-font-size
    height: 100%
    width: 100%
    display: flex
    align-items: center
    justify-content: center
    position: relative

  .v-otp-input__placeholder
    color: currentColor
    opacity: var(--v-disabled-opacity)

  .v-otp-input__caret
    position: absolute
    top: 50%
    transform: translateY(-50%)
    display: inline-block
    width: 1px
    height: 1.2em
    background: currentColor
    animation: v-otp-blink 1s step-end infinite

  .v-otp-input__loader
    align-items: center
    display: flex
    height: 100%
    justify-content: center
    width: 100%

    .v-progress-linear
      position: absolute

  @keyframes v-otp-blink
    0%, 100%
      opacity: 1
    50%
      opacity: 0

